Archive2/65/6e01d66c053bcc/output
main.cpp: In function 'char displayMenu()':
main.cpp:202:8: warning: variable 'selectionValid' set but not used [-Wunused-but-set-variable]
   bool selectionValid = false;
        ^
main.cpp:221:12: error: 'selectionValue' was not declared in this scope
  } while (!selectionValue);
            ^
main.cpp:177:7: warning: unused variable 'selectionValid' [-Wunused-variable]
  bool selectionValid = false;
       ^
main.cpp: In function 'void uploadFile(bool&, std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, std::vector<std::basic_string<char> >&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&, std::vector<int>&)':
main.cpp:245:41: error: expected ';' before ')' token
  inputFile.open((inputFileName.c_str())));
                                         ^
main.cpp:441:1: error: a function-definition is not allowed here before '{' token
 {
 ^
main.cpp:686:1: error: expected '}' at end of input
 } //END function listEmployeeIDs
 ^
main.cpp:247:6: warning: unused variable 'numberOfOpen' [-Wunused-variable]
  int numberOfOpen = 0;
      ^
main.cpp:256:9: warning: unused variable 'one' [-Wunused-variable]
  double one = 1.000000;
         ^
main.cpp:258:6: warning: unused variable 'goodLines' [-Wunused-variable]
  int goodLines = 0;
      ^
main.cpp:274:14: warning: unused variable 'interestOverMonths' [-Wunused-variable]
  long double interestOverMonths = 0.00;
              ^
main.cpp:275:9: warning: unused variable 'monthlyPayment' [-Wunused-variable]
  double monthlyPayment = 0.00;
         ^
main.cpp:276:9: warning: unused variable 'principalPaid' [-Wunused-variable]
  double principalPaid = 0.00;
         ^
main.cpp:277:9: warning: unused variable 'unpaidPrincipal' [-Wunused-variable]
  double unpaidPrincipal = 0.00;
         ^
main.cpp:278:9: warning: unused variable 'onePlusInterestOverMonths' [-Wunused-variable]
  double onePlusInterestOverMonths = 0.00;
         ^
main.cpp:279:9: warning: unused variable 'monthsTimesLoanYears' [-Wunused-variable]
  double monthsTimesLoanYears = 0.00;
         ^
main.cpp:280:9: warning: unused variable 'monthsTimesLoanYearsMinusPaymentsMade' [-Wunused-variable]
  double monthsTimesLoanYearsMinusPaymentsMade = 0.00;
         ^
main.cpp:281:9: warning: unused variable 'unpaidPrincipalPower' [-Wunused-variable]
  double unpaidPrincipalPower = 0.00;
         ^
main.cpp:283:6: warning: unused variable 'numberOfLoansOpen' [-Wunused-variable]
  int numberOfLoansOpen = 0;
      ^
main.cpp:284:6: warning: unused variable 'numberOfLoansClosed' [-Wunused-variable]
  int numberOfLoansClosed = 0;
      ^
main.cpp:286:9: warning: unused variable 'loanTotalAmtOpen' [-Wunused-variable]
  double loanTotalAmtOpen = 0.00;
         ^
main.cpp:287:9: warning: unused variable 'loanTotalAmtClosed' [-Wunused-variable]
  double loanTotalAmtClosed = 0.00;
         ^
main.cpp:289:14: warning: unused variable 'totalPrincipalPaidClosed' [-Wunused-variable]
  long double totalPrincipalPaidClosed = 0.00;
              ^
main.cpp:290:14: warning: unused variable 'totalUnpaidPrincipalClosed' [-Wunused-variable]
  long double totalUnpaidPrincipalClosed = 0.00;
              ^
main.cpp:292:14: warning: unused variable 'totalPrincipalPaidOpen' [-Wunused-variable]
  long double totalPrincipalPaidOpen = 0.00;
              ^
main.cpp:293:14: warning: unused variable 'totalUnpaidPrincipalOpen' [-Wunused-variable]
  long double totalUnpaidPrincipalOpen = 0.00;
              ^
main.cpp:295:6: warning: unused variable 'line0' [-Wunused-variable]
  int line0 = 0;
      ^
main.cpp:299:6: warning: unused variable 'total' [-Wunused-variable]
  int total = 0;
      ^
main.cpp:686:1: error: expected '}' at end of input
 } //END function listEmployeeIDs
 ^
